Flexbox to fix date alignment on calendar view

--- a/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
+++ b/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
@@ -3,7 +3,9 @@
     padding-left: 10px;
   }
   .event-date-wrapper{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 
   .event-occation-info-item{
